--- a/app/admin/view/ns/column/edit.html
+++ b/app/admin/view/ns/column/edit.html
@@ -1,16 +1,22 @@
 <form id="edit-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
 
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Pid')}:</label>
+        <label  class="control-label col-xs-12 col-sm-2">{:__('Pid')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-pid" data-rule="required" class="form-control" name="row[pid]" type="number" value="{$row.pid|htmlentities}">
+            {:build_select('row[pid]', $pcolumnList, $row['pid'], ['class'=>'form-control', 'required'=>'','id'=>'pid'])}
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Name')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-name" data-rule="required" class="form-control" name="row[name]" type="text" value="{$row.name|htmlentities}">
         </div>
     </div>
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Icon')}:</label>
         <div class="col-xs-12 col-sm-8">
             <div class="input-group">
-                <input id="c-icon" data-rule="required" class="form-control" size="50" name="row[icon]" type="text" value="{$row.icon|htmlentities}">
+                <input id="c-icon" data-rule="required" class="form-control" size="50" name="row[icon]" type="text" value="{$row.icon|htmlentities}" readonly>
                 <div class="input-group-addon no-border no-padding">
                     <span><button type="button" id="plupload-icon" class="btn btn-danger plupload" data-input-id="c-icon" data-mimetype="image/gif,image/jpeg,image/png,image/jpg,image/bmp" data-multiple="false" data-preview-id="p-icon"><i class="fa fa-upload"></i> {:__('Upload')}</button></span>
                     <span><button type="button" id="fachoose-icon" class="btn btn-primary fachoose" data-input-id="c-icon" data-mimetype="image/*" data-multiple="false"><i class="fa fa-list"></i> {:__('Choose')}</button></span>
@@ -20,24 +26,19 @@
             <ul class="row list-inline plupload-preview" id="p-icon"></ul>
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group" id="price">
         <label class="control-label col-xs-12 col-sm-2">{:__('Price')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-price" data-rule="required" class="form-control" step="0.01" name="row[price]" type="number" value="{$row.price|htmlentities}">
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group" id="refresh_price">
         <label class="control-label col-xs-12 col-sm-2">{:__('Refresh_price')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-refresh_price" data-rule="required" class="form-control" step="0.01" name="row[refresh_price]" type="number" value="{$row.refresh_price|htmlentities}">
         </div>
     </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Name')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-name" data-rule="required" class="form-control" name="row[name]" type="text" value="{$row.name|htmlentities}">
-        </div>
-    </div>
+
     <!-- <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Create_time')}:</label>
         <div class="col-xs-12 col-sm-8">
