--- a/app/admin/view/ns/wxuser/index.html
+++ b/app/admin/view/ns/wxuser/index.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default panel-intro">
     
-    <div class="panel-heading">
+    <!-- <div class="panel-heading">
         {:build_heading(null,FALSE)}
         <ul class="nav nav-tabs" data-field="status">
             <li class="active"><a href="#t-all" data-value="" data-toggle="tab">{:__('All')}</a></li>
@@ -8,7 +8,7 @@
             <li><a href="#t-{$key}" data-value="{$key}" data-toggle="tab">{$vo}</a></li>
             {/foreach}
         </ul>
-    </div>
+    </div> -->
 
 
     <div class="panel-body">
