--- a/app/admin/view/ns/content/edit.html
+++ b/app/admin/view/ns/content/edit.html
@@ -72,8 +72,33 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Address')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-address" data-rule="required" class="form-control" name="row[address]" type="text" value="{$row.address|htmlentities}">
+            <input id="address" data-toggle="addresspicker" data-input-id="address"  data-lat-id="lat"  data-lng-id="lng" data-rule="required" class="form-control" name="row[address]" type="text" value="{$row.address|htmlentities}">
+            <input id="lat" data-rule="required" class="form-control" name="row[lat]" type="hidden" value="{$row.lat}">
+            <input id="lng" data-rule="required" class="form-control" name="row[lng]" type="hidden" value="{$row.lng}">
         </div>
+    </div>
+    <div class="form-group row">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Private')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <dl class="fieldlist" data-template="basictpl" data-name="row[extra]">
+                <dd>
+                    <ins>{:__('标题')}</ins>
+                    <ins>{:__('内容')}</ins>
+                </dd>
+                <dd><a href="javascript:;" class="btn btn-sm btn-success btn-append"><i class="fa fa-plus"></i> {:__('Append')}</a></dd>
+                <!--请注意 dd和textarea间不能存在其它任何元素，实际开发中textarea应该添加个hidden进行隐藏-->
+                <textarea name="row[extra]" class="form-control" cols="30" rows="5" style="display:none;">{$row.extra}</textarea>
+            </dl>
+            <script id="basictpl" type="text/html">
+                <dd class="form-inline">
+                    <ins><input type="text" name="<%=name%>[<%=index%>][title]" class="form-control" value="<%=row.title%>" placeholder="标题" size="10"/></ins>
+                    <ins><input type="text" name="<%=name%>[<%=index%>][content]" class="form-control" value="<%=row.content%>" placeholder="内容"/></ins>
+                    <!--下面的两个按钮务必保留-->
+                    <span class="btn btn-sm btn-danger btn-remove"><i class="fa fa-times"></i></span>
+                    <span class="btn btn-sm btn-primary btn-dragsort"><i class="fa fa-arrows"></i></span>
+                </dd>
+            </script>
+        </div> 
     </div>
     <!-- <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Lng')}:</label>
