--- a/app/admin/view/ns/content/add.html
+++ b/app/admin/view/ns/content/add.html
@@ -9,7 +9,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">栏目:</label>
         <div class="col-xs-12 col-sm-8"> 
-            <div class="form-inline" data-toggle="cxselect" data-selects="first,second">
+            <div class="form-inline" data-toggle="cxselect" data-selects="first,second" data-required="true">
                 <select class="first form-control" name="row[pcolumn_id]" data-url="ns.column/cxselect?pid=0"></select>
                 <select class="second form-control" name="row[column_id]" data-url="ns.column/cxselect" data-query-name="pid"></select>
             </div>
